Fix Highlighting and Null reference bug

--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/Pages/ViewPasswords.razor
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/Pages/ViewPasswords.razor
@@ -3,6 +3,7 @@
 @inherits ViewPasswordsClass
 
 @using IntuneLAPsAdmin.Models;
+@using IntuneLAPsAdmin.Helpers;
 
 <h1>@Title</h1>
 <div class="row">
@@ -56,12 +57,12 @@ else
         </thead>
         <tbody>
             @{
-                var ordered = results.value.OrderByDescending(x => x.PasswordChanged);
-                var currentPasswordDate = ordered.FirstOrDefault().PasswordChanged.ToLocalTime();
+                var ordered = results.value.OrderByDescending(x => x.PasswordChanged).OrderByDescending(n => n.Enabled);
+                var currentPasswordDate = ordered.FirstOrDefault().PasswordChanged.ToLocalTime().Trim();
             }
             @foreach (AdminPasswordsResults record in ordered)
             {
-                <tr class="@(currentPasswordDate.Equals(record.PasswordChanged.ToLocalTime()) && record.Enabled ? "btn-success" : "")">
+                <tr class="@(currentPasswordDate.Equals(record.PasswordChanged.ToLocalTime().Trim()) && record.Enabled ? "btn-success" : "")">
                     <td>@record.Hostname</td>
                     <td>@record.Account</td>
                     <td>@record.PasswordChanged.ToLocalTime()</td>
