--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/Shared/MainLayout.razor
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/Shared/MainLayout.razor
@@ -1,17 +1,25 @@
 ﻿@inherits LayoutComponentBase
 @using Sotsera.Blazor.Toaster
 <ToastContainer />
+<AuthorizeView>
+    <Authorized>
+        <ClientAuth>
+            <div class="sidebar">
+                <NavMenu />
+            </div>
 
-<div class="sidebar">
-    <NavMenu />
-</div>
+            <div class="main">
+                <div class="top-row px-4 auth">
+                    <LoginDisplay />
+                </div>
 
-<div class="main">
-    <div class="top-row px-4 auth">
-        <LoginDisplay />
-    </div>
-
-    <div class="content px-4">
-        @Body
-    </div>
-</div>
+                <div class="content px-4">
+                    @Body
+                </div>
+            </div>
+        </ClientAuth>
+    </Authorized>
+    <NotAuthorized>
+        <p>Not Authorized</p>
+    </NotAuthorized>
+</AuthorizeView>
