Finish Group Auth implementation

--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/wwwroot/css/site.css
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/wwwroot/css/site.css
@@ -181,3 +181,10 @@ app {
         display: block;
     }
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
