--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/App.razor
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/App.razor
@@ -1,8 +1,9 @@
-﻿
-<CascadingAuthenticationState>
+﻿<CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Program).Assembly">
         <Found Context="routeData">
-            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+            <LoadAllGroupClaims>
+                <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+            </LoadAllGroupClaims>
         </Found>
         <NotFound>
             <LayoutView Layout="@typeof(MainLayout)">
