--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/Shared/NavMenu.razor
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using Microsoft.Extensions.Options;
+
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">iLAPsAdmin</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -7,18 +9,22 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3" Match="NavLinkMatch.All">
-            <NavLink class="nav-link" href="viewpasswords" Match="NavLinkMatch.All">
-                <span class="oi oi-key" aria-hidden="true"></span> Passwords
-            </NavLink>
-        </li>
+        <AuthorizeView Roles="SuperUser,User">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Home
+                </NavLink>
+            </li>
+        </AuthorizeView>
+        <AuthorizeView Roles="SuperUser,User">
+            <li class="nav-item px-3" Match="NavLinkMatch.All">
+                <NavLink class="nav-link" href="viewpasswords" Match="NavLinkMatch.All">
+                    <span class="oi oi-key" aria-hidden="true"></span> Passwords
+                </NavLink>
+            </li>
+        </AuthorizeView>
         <AuthorizeView Roles="SuperUser">
-            <li class="nav-item px-3" >
+            <li class="nav-item px-3">
                 <NavLink class="nav-link" href="AdminViewPasswords" Match="NavLinkMatch.All">
                     <span class="oi oi-key" aria-hidden="true"></span>Passwords (No Reset)
                 </NavLink>
@@ -31,7 +37,17 @@
                 </NavLink>
             </li>
         </AuthorizeView>
+        <AuthorizeView Roles="SuperUser,User">
+            <IsInDEMGroup>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="DemGroupViewPasswords" Match="NavLinkMatch.All">
+                        <span class="oi oi-clock" aria-hidden="true"></span>View DEM Passwords
+                    </NavLink>
+                </li>
+            </IsInDEMGroup>
+        </AuthorizeView>
     </ul>
+
 </div>
 
 @code {
