--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/Shared/NavMenu.razor
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/Shared/NavMenu.razor
@@ -38,7 +38,7 @@
             </li>
         </AuthorizeView>
         <AuthorizeView Roles="SuperUser,User">
-            <IsInDEMGroup>
+            <IsInDEMGroup SupressErrorMessage="true">
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="DemGroupViewPasswords" Match="NavLinkMatch.All">
                         <span class="oi oi-clock" aria-hidden="true"></span>View DEM Passwords
