Add DEM Role that can see only DEM Section

--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/Pages/DemGroupViewPasswords.razor
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/Pages/DemGroupViewPasswords.razor
@@ -1,5 +1,5 @@
 ﻿@page "/DemGroupViewPasswords"
-@attribute [Authorize(Roles = "User, SuperUser")]
+@attribute [Authorize(Roles = "User, SuperUser, DEM")]
 @inherits DemGroupViewPasswordsClass
 
 @using IntuneLAPsAdmin.Models;
