--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/Shared/LoginDisplay.razor
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/Shared/LoginDisplay.razor
@@ -1,7 +1,7 @@
 ﻿<AuthorizeView>
     <Authorized>
         Hello, @context.User.Identity.Name!
-        <a href="AzureAD/Account/SignOut">Log out</a>
+        <a href="/signout-callback-oidc">Log out</a>
     </Authorized>
     <NotAuthorized>
         <a href="AzureAD/Account/SignIn">Log in</a>
