Add DEMs Account AutoChange script and UI Group Case handling bug

--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/Pages/DemGroupViewPasswords.razor
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/Pages/DemGroupViewPasswords.razor
@@ -17,7 +17,7 @@
             <thead>
                 <tr>
                     <th>Security Group</th>
-                    <th>Email</th>
+                    <th>DEM Account</th>
                     <th>Next Scheduled Change</th>
                     <th>Password</th>
                     <th>Account Status</th>
