Fix Prefix code to be non-obstructive, Update DEM Password script

--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/Pages/DemGroupViewPasswords.razor
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/Pages/DemGroupViewPasswords.razor
@@ -45,6 +45,9 @@
                         <td>@(record.Enabled ? "Enabled" : "Disabled")</td>
                     </tr>
                 }
+                <tr>
+                    <td colspan="5"><center>Showing @results.Count Results</center></td>
+                </tr>
             </tbody>
         </table>
     }
