--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/Pages/ViewPasswords.razor
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/Pages/ViewPasswords.razor
@@ -61,27 +61,37 @@
                     var ordered = results.value.OrderByDescending(x => x.PasswordChanged).OrderByDescending(n => n.Enabled);
                     var currentPasswordDate = ordered.FirstOrDefault().PasswordChanged.ToLocalTime().Trim();
                 }
-                @foreach (AdminPasswordsResults record in ordered)
+                @foreach ((AdminPasswordsResults record, var index) in ordered.WithIndex())
                 {
-                    <tr class="@(currentPasswordDate.Equals(record.PasswordChanged.ToLocalTime().Trim()) && record.Enabled ? "btn-success" : "")">
-                        <td>@record.Hostname</td>
-                        <td>@record.Account</td>
-                        <td>@record.PasswordChanged.ToLocalTime()</td>
-                        <td>@record.SerialNumber</td>
-                        <td>@record.PublicIp</td>
-                        <td>@(record.Enabled ? "Enabled" : "Disabled")</td>
-                        <td>
-                            @if (string.IsNullOrEmpty(record.DecryptedPassword))
-                            {
-                                <button type="button" @onclick="(() => DecryptPassword(record))" class="btn btn-primary w-100">View Password</button>
-                            }
-                            else
-                            {
-                                @record.DecryptedPassword
-                            }
-                        </td>
-                    </tr>
+                    if (index < DefaultViewCount)
+                    {
+                        <tr class="@(currentPasswordDate.Equals(record.PasswordChanged.ToLocalTime().Trim()) && record.Enabled ? "btn-success" : "")">
+                            <td>@record.Hostname</td>
+                            <td>@record.Account</td>
+                            <td>@record.PasswordChanged.ToLocalTime()</td>
+                            <td>@record.SerialNumber</td>
+                            <td>@record.PublicIp</td>
+                            <td>@(record.Enabled ? "Enabled" : "Disabled")</td>
+                            <td>
+                                @if (string.IsNullOrEmpty(record.DecryptedPassword))
+                                {
+                                    <button type="button" @onclick="(() => DecryptPassword(record))" class="btn btn-primary w-100">View Password</button>
+                                }
+                                else
+                                {
+                                    @record.DecryptedPassword
+                                }
+                            </td>
+                        </tr>
+                    }
+                    if (index == DefaultViewCount)
+                    {
+                        <tr>
+                            <td colspan="7"><button @onclick="IncrementViewCount" type="button" class="btn btn-info w-100">Load Historical Passwords</button></td>
+                        </tr>
+                    }
                 }
+
             </tbody>
         </table>
     }
