Fix install script error and UI updates

--- a/IntuneLAPsAdmin/IntuneLAPsAdmin/Pages/DemGroupViewPasswords.razor
+++ b/IntuneLAPsAdmin/IntuneLAPsAdmin/Pages/DemGroupViewPasswords.razor
@@ -5,50 +5,53 @@
 @using IntuneLAPsAdmin.Models;
 @using IntuneLAPsAdmin.Helpers;
 <IsInDEMGroup>
-    <h1>@Title</h1>
+    <LoadingSpinner Loading="IsLoading" Relative="true" CssClass="transparent">
 
-    @if (!ShowResults)
-    {
-        <p><em>No DEM Accounts Matching Your Security Groups</em></p>
-    }
-    else
-    {
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Security Group</th>
-                    <th>DEM Account</th>
-                    <th>Next Scheduled Change</th>
-                    <th>Password</th>
-                   
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (DEMPasswordResults record in results)
-                {
-                    DateTime NextChangeDate = record.NeedsReset ? record.ResetRequestedDate : record.ScheduledNextChange;
+        <h1>@Title</h1>
+
+        @if (!ShowResults)
+        {
+            <p><em>No DEM Accounts Matching Your Security Groups</em></p>
+        }
+        else
+        {
+            <table class="table">
+                <thead>
                     <tr>
-                        <td>@record.Account</td>
-                        <td>@record.AccountEmailAddress</td>
-                        <td>@NextChangeDate.ToLocalTime()</td>
-                        <td>
-                            @if (string.IsNullOrEmpty(record.DecryptedPassword))
-                            {
-                                <button type="button" @onclick="(() => DecryptPassword(record))" class="btn btn-primary w-100">View Password</button>
-                            }
-                            else
-                            {
-                                @record.DecryptedPassword
-                            }
+                        <th>Security Group</th>
+                        <th>DEM Account</th>
+                        <th>Next Scheduled Change</th>
+                        <th>Password</th>
 
-                        </td>
-                        
                     </tr>
-                }
-                <tr>
-                    <td colspan="5"><center>Showing @results.Count Results</center></td>
-                </tr>
-            </tbody>
-        </table>
-    }
+                </thead>
+                <tbody>
+                    @foreach (DEMPasswordResults record in results)
+                    {
+                        DateTime NextChangeDate = record.NeedsReset ? record.ResetRequestedDate : record.ScheduledNextChange;
+                        <tr>
+                            <td>@record.Account</td>
+                            <td>@record.AccountEmailAddress</td>
+                            <td>@NextChangeDate.ToLocalTime()</td>
+                            <td>
+                                @if (string.IsNullOrEmpty(record.DecryptedPassword))
+                                {
+                                    <button type="button" @onclick="(() => DecryptPassword(record))" class="btn btn-primary w-100">View Password</button>
+                                }
+                                else
+                                {
+                                    @record.DecryptedPassword
+                                }
+
+                            </td>
+
+                        </tr>
+                    }
+                    <tr>
+                        <td colspan="5"><center>Showing @results.Count Results</center></td>
+                    </tr>
+                </tbody>
+            </table>
+        }
+    </LoadingSpinner>
 </IsInDEMGroup>
